Bug fixes:
 * test/run: Do not run pep8 and pyflakes when running against the sytem
   installed Apport.
 * test_backend_apt_dpkg.py: For the "are we online" check, verify that we can
   download from http://ddebs.ubuntu.com/, not just whether we have a default
   route. The latter is not sufficient for e. g. buildd environments which are
   online, but are restricted by proxies or firewalls.

2.2.2 (2012-06-13):
-------------------
Improvements:
 * testsuite: Run with Python 3 by default. To test with Python 2, run
   "PYTHON=python2 test/run".

Bug fixes:
 * apport: Redefine sys.std{out,err} when redirecting output, as they are None
   in Python 3 when being called from the kernel.
 * test/test_signal_crashes.py: Clean up unexpected core dumps on failed test
   cases.
 * apport-gtk: Fix crash when closing the crash dialog while the information is
   being collected.
 * hookutils.py, xsession_errors(): Fix crash when running under a non-UTF8 locale.
 * data/apport: Do not use sys.stdin.fileno(), it is invalid when being called
   from the kernel with Python 3.
 * data/apport: When core dumps are enabled, read them from the written report
   instead of directly from stdin (and then reading the written core file into
   the .crash report). If the core file size is limited, we otherwise stop
   reading the core dump from the kernel in the middle and have no (or a
   broken) core dump to be put into the report.
 * data/apport: Properly close the written crash report before changing its
   permissions to be readable. This prevents having crash reporting UI from
   looking at incomplete .crash files.

2.2.1 (2012-06-11)
------------------
Bug fixes:
 * apport-cli: Port to work with Python 3.
 * setup.py: When fixing hashbang lines of installed scripts, only include the
   major Python version.
 * hookutils.py, read_file, attach_file(), attach_file_if_exists(): Convert
   file contents to unicode if the contents is UTF-8, or the newly added