@@ -10,6 +10,8 @@ Bug fixes:
    download from http://ddebs.ubuntu.com/, not just whether we have a default
    route. The latter is not sufficient for e. g. buildd environments which are
    online, but are restricted by proxies or firewalls.
+ * test_report.py: Call "sync" after test script write core dumps, to ensure
+   that subsequent operations have a complete one.
 
 2.2.2 (2012-06-13):
 -------------------
